<resources>
    <string name="app_name">Redo</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Add</string>
    <string name="label_name">Name</string>
    <string name="label_every">Every</string>
    <string name="label_years">Years</string>
    <string name="label_months">Months</string>
    <string name="label_weeks">Weeks</string>
    <string name="label_days">Days</string>
    <string name="label_add_reminder">Add Reminder</string>

</resources>
