<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textAutoComplete"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_every"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/delay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberSigned" />



    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation='horizontal'
        android:layout_gravity="center"
        android:id="@+id/type">

        <RadioButton

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_years"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_months"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_weeks"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_days"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
    </RadioGroup>

    <Button
        android:id="@+id/save"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/action_add" />


</LinearLayout>